Adapt tests following Micronaut upgrade and fix dependencies issues